# tetra

./: Cargo.toml
src/: context.rs  framework.rs  main.rs  util.rs
src/commands/: command_a.rs  command_b.rs  mod.rs  shutdown.rs
src/twilight_util/: gateway.rs
src/util/: mod.rs  state_service.rs
